--- a/style.css
+++ b/style.css
@@ -43,6 +43,29 @@ input[type="checkbox"]:checked::before {
     visibility: visible;
 }
 
+/* MODAL */
+::backdrop {
+    background-image: linear-gradient(
+        45deg,
+        var(--brown),
+        var(--dark-green),
+        var(--green),
+        var(--light-green),
+        var(--blue)
+    );
+    opacity: 0.75;
+}
+
+.center-window {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
+  
+
 /* TEXT */
 
 .text-dark-green {
